--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/.idea
-/.vscode
+.idea
+.vscode
 /node_modules
 /.pnp
 .pnp.*
