--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "sentry-site",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "deploy": "gh-pages -d out --dotfiles"
+    "lint": "next lint"
   },
-  "homepage": "https://zhaoritian1997.github.io/sentry-template",
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
     "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0"
